Improve Javadoc, comments and code clarity