@@ -6,22 +6,20 @@ import io.github.ollybishop.bishopsgambit.model.piece.Piece;
 
 class IllegalMoveException extends IllegalArgumentException
 {
-    IllegalMoveException( String message )
+    private IllegalMoveException( String message )
     {
         super( message );
     }
 
     static IllegalMoveException wrongPlayer( Piece piece, Player activePlayer )
     {
-        String message = String.format( "%s cannot be moved because it is %s's turn.", piece, activePlayer );
-
+        String message = "%s cannot be moved because it is %s's turn.".formatted( piece, activePlayer );
         return new IllegalMoveException( message );
     }
 
     static IllegalMoveException illegalPieceMove( Square from, Square to )
     {
-        String message = String.format( "%s cannot legally move from %s to %s.", from.getPiece(), from, to );
-
+        String message = "%s cannot legally move from %s to %s.".formatted( from.getPiece(), from, to );
         return new IllegalMoveException( message );
     }
 }
