@@ -6,6 +6,6 @@ class NoPieceOnSquareException extends IllegalStateException
 {
     NoPieceOnSquareException( Square from )
     {
-        super( String.format( "Cannot move a piece from empty square %s.", from ) );
+        super( "Cannot move a piece from empty square %s.".formatted( from ) );
     }
 }
